Changing project to our standards

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "./node_modules/prettier/bin-prettier.js --check \"src/**/*.js\""
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "fastify": "^3.9.1",
     "mongoose": "^5.11.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
