--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "check-node-version": "./node_modules/check-node-version/bin.js --node '>= 10'",
+    "test": "NODE_ENV=test jest -c jest.config.js --runInBand --detectOpenHandles --forceExit --coverage",
     "lint": "./node_modules/prettier/bin-prettier.js --check \"src/**/*.js\""
   },
   "keywords": [],
@@ -16,6 +18,10 @@
     "mongoose": "^5.11.7"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "@types/jest": "^26.0.19",
+    "check-node-version": "^4.0.3",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1"
   }
 }
